# findit-keyframe

./: .gitignore  CHANGELOG.md  LICENSE-APACHE  LICENSE-MIT  README.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  bench_e2e.py  bench_instrumented.py  bench_pure_algo.py  bench_real_video.py
docs/: algorithm.md  rust-porting.md
examples/: extract_basic.py  extract_from_shots.py
src/findit_keyframe/: __init__.py  cli.py  decode.py  decoder.py  extractor.py  quality.py  saliency.py  sampler.py  selector.py  types.py
tests/: conftest.py  test_benchmark.py  test_cli.py  test_decoder.py  test_integration.py  test_quality.py  test_quality_golden.py  test_saliency.py  test_sampler.py  test_sampler_regression.py  test_selector.py  test_types.py
tests/fixtures/quality/: canonical.json
tests/fixtures/regression/: extract_all_synthetic.json
