[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "findit-keyframe"
version = "0.0.0"
description = "Per-shot keyframe extraction with stratified temporal sampling. Python reference implementation; Rust translation target."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0 OR MIT"
license-files = ["LICENSE-APACHE", "LICENSE-MIT"]
authors = [
    { name = "Findit-AI" },
]
keywords = ["video", "keyframe", "scene-detection", "vlm", "embedding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Operating System :: OS Independent",
]
dependencies = [
    "av>=13.0,<14.0",
    "numpy>=2.0,<3.0",
]

[project.optional-dependencies]
macos = [
    "pyobjc-framework-Vision>=10.3; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.3; sys_platform == 'darwin'",
]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.6.0",
    "mypy>=1.11",
    "types-Pillow",
]

[project.scripts]
findit-keyframe = "findit_keyframe.cli:main"

[project.urls]
Repository = "https://github.com/Findit-AI/findit-keyframe"
Issues = "https://github.com/Findit-AI/findit-keyframe/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/findit_keyframe"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "docs/",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "CHANGELOG.md",
    "TASKS.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "RUF",
    "PT",
    "TCH",
    "PIE",
    "PERF",
    "FBT",
    "ANN",
    "S",
]
ignore = [
    "ANN401",
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S", "FBT"]
"benchmarks/**/*.py" = ["ANN", "S", "FBT"]
"examples/**/*.py" = ["ANN", "S", "FBT"]

[tool.ruff.lint.isort]
known-first-party = ["findit_keyframe"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "macos: tests requiring macOS (Apple Vision, etc.)",
    "integration: end-to-end tests touching real video files",
    "slow: long-running tests (benchmarks, full-video integration)",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_equality = true
extra_checks = true
files = ["src/findit_keyframe"]

[[tool.mypy.overrides]]
module = ["av", "av.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["Vision", "Quartz", "objc", "Foundation"]
ignore_missing_imports = true
